--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="enter_step_str">Введите шаг</string>
     <string name="save_str">Сохранить</string>
     <string name="saved_str">Сохранено</string>
+    <string name="search">Поиск</string>
 </resources>
