Implemented minimum viable caller activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="save_str">Сохранить</string>
     <string name="saved_str">Сохранено</string>
     <string name="search">Поиск</string>
+    <string name="call_ambulance_str">Call ambulance</string>
+    <string name="important_str">Важно!</string>
+
+
 </resources>
