--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,34 +1,31 @@
 <resources>
     <string name="app_name">FindAid</string>
-    <string name="map_str">Карта</string>
-    <string name="help_str">Нужна помощь!</string>
-    <string name="settings_str">Настройки</string>
-    <string name="reference_str">Справочник</string>
-    <string name="caller_str">Вызов</string>
+    <string name="reference_str">Reference</string>
+    <string name="caller_str">Call</string>
 
-    <string name="dummy_str">\?DummyString\?</string>
-    <string name="reference">Справочник</string>
-    <string name="caller">Вызов</string>
-    <string name="title_activity_caller">CallerActivity</string>
-    <string name="title_activity_reference">ReferenceActivity</string>
-    <string name="title_activity_add_reference_item">Добавить описание</string>
-    <string name="add_item_name_str">Название</string>
-    <string name="location_str">Местность</string>
-    <string name="organ_str">Орган</string>
-    <string name="season_str">Время года</string>
-    <string name="symptom_str">Симптопы</string>
-    <string name="step_str">Шаги</string>
-    <string name="enter_step_str">Введите шаг</string>
-    <string name="save_str">Сохранить</string>
-    <string name="saved_str">Сохранено</string>
-    <string name="search">Поиск</string>
+    <string name="caller">Call</string>
+    <string name="title_activity_add_reference_item">Add item</string>
+    <string name="add_item_name_str">Name</string>
+    <string name="location_str">Location</string>
+    <string name="organ_str">Organ</string>
+    <string name="season_str">Season</string>
+    <string name="symptom_str">Symptoms</string>
+    <string name="step_str">Steps</string>
+    <string name="save_str">Save</string>
+    <string name="saved_str">Saved</string>
+    <string name="search">Search</string>
     <string name="call_ambulance_str">Call ambulance</string>
-    <string name="important_str">Важно!</string>
-    <string name="title_activity_detail_reference_item">Описание</string>
-    <string name="allowed_step_symptom">Можно только буквы, цифры и пробелы.</string>
-    <string name="valid_symptom_step_regex">([A-Za-zА-Яа-я1-9]{1,20} ?){1,25}</string>
-    <string name="title_activity_update_reference_item">Обновить</string>
-    <string name="update_str">Обновить</string>
+    <string name="important_str">Important!</string>
+    <string name="title_activity_detail_reference_item">Details</string>
+    <string name="allowed_step_symptom">Only letters, numbers and spaces are allowed</string>
+    <string name="valid_symptom_step_regex">([A-Za-zА-Яа-я1-9]{1,20} ?){1,50}</string>
+    <string name="title_activity_update_reference_item">Update</string>
+    <string name="update_str">Update</string>
+    <string name="trauma_name_regex">([A-Za-zА-Яа-я]{1,20} ?){1,5}</string>
+    <string name="symptom_hint_str">Введите симптом</string>
+    <string name="step_hint_str">Введите шаг</string>
+    <string name="trauma_name_invalid_message">Имя должно быть не пустым и содержать только буквы</string>
+    <string name="updated_str">Updated</string>
 
 
 </resources>
